...
    loading: Boolean,
    links: List<Link>
) {
    Column {
        OutlinedTextField(
            modifier = Modifier
                .testTag("query")
                .fillMaxWidth()
                .padding(16.dp),
            value = searchQuery,
            onValueChange = onSearchQueryChange,
            trailingIcon = {
                IconButton(
                    modifier = Modifier.testTag("clear"),
                    onClick = onClearQueryClick
                ) {
                    Icon(Icons.Default.Clear, contentDescription = null)
                }
            },
        )
...
